[gd_scene load_steps=6 format=3 uid="uid://dseph2p8072xn"]

[ext_resource type="Script" path="res://Menus/MainMenu.gd" id="1_a1v1j"]
[ext_resource type="Texture2D" uid="uid://ddrn0bni3j7gv" path="res://Assets/MainBackground.png" id="2_6njg3"]
[ext_resource type="PackedScene" uid="uid://cxq44ooukv26n" path="res://Menus/Options.tscn" id="2_7vbm4"]
[ext_resource type="LabelSettings" uid="uid://lyux8pgux32t" path="res://Fonts/title_label_settings.tres" id="3_3kkdf"]
[ext_resource type="FontFile" uid="uid://dudqd12fiexy" path="res://Fonts/Middle.ttf" id="4_o4k77"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a1v1j")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6njg3")
expand_mode = 2
stretch_mode = 6

[node name="MainContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/VBoxContainer"]
layout_mode = 2
text = "Title of the game"
label_settings = ExtResource("3_3kkdf")

[node name="NewGame" type="Button" parent="MainContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("4_o4k77")
theme_override_font_sizes/font_size = 12
text = "Start"

[node name="Continue" type="Button" parent="MainContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("4_o4k77")
theme_override_font_sizes/font_size = 12
text = "Continue"

[node name="Options" type="Button" parent="MainContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("4_o4k77")
theme_override_font_sizes/font_size = 12
text = "Options"

[node name="Quit" type="Button" parent="MainContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("4_o4k77")
theme_override_font_sizes/font_size = 12
text = "Quit"

[node name="OptionsContainer" parent="." instance=ExtResource("2_7vbm4")]
visible = false
layout_mode = 1
theme_override_constants/margin_left = 25
theme_override_constants/margin_right = 25

[connection signal="pressed" from="MainContainer/VBoxContainer/NewGame" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MainContainer/VBoxContainer/Options" to="." method="showOptions"]
[connection signal="pressed" from="MainContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="returnButton" from="OptionsContainer" to="." method="hideOptions"]
